# seqdd

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  TODO.md  fake_accesses.txt  pyproject.toml  reg_save.txt
.github/workflows/: ruff.yml  testing.yml
doc/source/: conf.py  index.rst
doc/source/_templates/: layout.html
doc/source/developer/: index.rst  installation.rst  overview.rst  testing.rst
doc/source/developer/api/: index.rst
doc/source/developer/api/register/: datatype_manager.rst  reg_manager.rst  src_manager.rst
doc/source/developer/api/register/data_sources/: data_sources.rst  ena.rst  logan.rst  ncbi.rst  refseq.rst  sources.rst  sra.rst  url.rst  url_server.rst
doc/source/developer/api/register/sources/: ena.rst  ncbi.rst  sources.rst  sra.rst  url.rst
doc/source/developer/api/utils/: binaries.rst  checksum.rst  commands.rst  download.rst  manifest.rst  net.rst  scheduler.rst
doc/source/user/: index.rst  installation.rst  quick_start.rst
seqdd/: __init__.py  __main__.py  errors.py
seqdd/downloaders/: download.py  ena_reads.py  ncbi.py  sra.py  url.py
seqdd/register/: datatype_manager.py  reg_manager.py  src_manager.py
seqdd/register/data_sources/: __init__.py  ena.py  logan.py  ncbi.py  sra.py  url.py
seqdd/register/data_type/: __init__.py  assemblies.py  logan.py  read_archives.py  refseq.py  sequences.py  url.py
seqdd/register/sources/: __init__.py  ena.py  ena_reads.py  logan.py  ncbi.py  not_used_ncbi.py  not_used_sra.py  refseq.py  sra.py  url.py  url_server.py
seqdd/utils/: binaries.py  checksum.py  commands.py  download.py  manifest.py  net.py  progress.py  reg_manager.py  scheduler.py
tests/: __init__.py  run_tests.py  test_binaries.py  test_commands.py  test_download.py  test_download_large.py  test_ena.py  test_logan.py  test_main.py  test_manifest.py  test_net.py  test_progress.py  test_progress_ipc.py  test_refseq.py  test_reg_manager.py  test_scheduler.py  test_sequences.py  test_url.py
tests/data/: register.reg  subprocess_get_ena_ftp_url_ERR00001.BAD.err  subprocess_get_ena_ftp_url_ERR00001.BAD.out  subprocess_get_ena_ftp_url_ERR00002.BAD.err  subprocess_get_ena_ftp_url_ERR00002.BAD.out  subprocess_get_ena_ftp_url_ERR00003.BAD.out  subprocess_get_ena_ftp_url_ERR00004.BAD.out  subprocess_get_ena_ftp_url_ERR3258091.out  subprocess_get_ena_ftp_url_GCA_003543015.1.err  subprocess_get_ena_ftp_url_GCA_003543015.1.out  subprocess_get_ena_ftp_url_fastq_ERR00002.BAD.out  subprocess_get_ena_ftp_url_fastq_ERR00004.BAD.err  subprocess_get_ena_ftp_url_fastq_ERR00004.BAD.out  subprocess_get_ena_ftp_url_fastq_ERR3258091.err  subprocess_get_ena_ftp_url_fastq_ERR3258091.out  subprocess_resp_valid_acc_API_GCA_00000000.99.err  subprocess_resp_valid_acc_API_GCA_00000000.99.out  subprocess_resp_valid_acc_API_GCA_00000000.BAD.err  subprocess_resp_valid_acc_API_GCA_00000000.BAD.out  subprocess_resp_valid_acc_API_GCA_003543015.1.err  subprocess_resp_valid_acc_API_GCA_003543015.1.out  subprocess_resp_valid_acc_API_curl_failed.err  subprocess_resp_valid_acc_API_mix_acc.err  subprocess_resp_valid_acc_API_mix_acc.out
tests/data/Genomes/: AF268967.fa
tests/functional/: main.sh  test_assemblies.sh  test_init.sh  test_logan.sh  test_sequences.sh  test_url.sh
tests/stress/: __init__.py  large_download_stress.py
tests/support/: __init__.py  controllable_http_server.py
