[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seqdd"
dynamic = ["version"]
authors = [
  { name="Yoann Dufresne", email="yoann.dufresne@univ-lille.fr" },
  { name="Bertrand Néron", email="bertrand.neron@pasteur.fr" },
]
description = "Share and download biological sequence datasets from accession numbers using portable register files, to simplify retrieval and improve reproducibility."
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
keywords = ["bioinformatics", "sequence", "genomics", "reproducibility", "dataset", "download", "ena", "ncbi", "refseq"]
dependencies = [
    "requests",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "Environment :: Console",
    "Development Status :: 3 - Alpha"
]

[project.optional-dependencies]
dev = [
    'sphinx',
    'sphinx_rtd_theme',
    'sphinx-autodoc-typehints',
    'coverage',
    'ruff'
]

[project.urls]
Homepage = "https://github.com/yoann-dufresne/seqdd"
Documentation = "https://github.com/yoann-dufresne/seqdd#readme"
Repository = "https://github.com/yoann-dufresne/seqdd"
Issues = "https://github.com/yoann-dufresne/seqdd/issues"

[project.scripts]
seqdd = "seqdd.__main__:main"


[tool.hatch.version]
path = "seqdd/__init__.py"

[tool.coverage.run]
branch = true
source = ["seqdd"]
command_line = "-m unittest discover -vv -s tests"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

src = ['seqdd', 'tests']
[tool.ruff.format]
indent-style = "space"
